[tool.poetry]
name = "dynamoer"
version = "0.1.0"
description = ""
authors = ["Ville Kärkkäinen <ville.karkkainen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.20"
jsonschema = "^3.2.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
